[package]
name = "koroz-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
koroz-common = { path = "../koroz-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
dnsparse = "0.3.0"
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "koroz"
path = "src/main.rs"
